Add name to gradle cache step

--- a/.github/workflows/build-test-debug.yml
+++ b/.github/workflows/build-test-debug.yml
@@ -37,7 +37,8 @@ jobs:
           gradle-version: wrapper
           cache-read-only: false
 
-      - uses: actions/cache@v4
+      - name: Gradle cache
+        uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
