gha: Fix test report path

--- a/.github/workflows/build-test-debug.yml
+++ b/.github/workflows/build-test-debug.yml
@@ -76,7 +76,7 @@ jobs:
         uses: mikepenz/action-junit-report@v5
         if: success() || failure()
         with:
-          report_paths: '**/build/test-results/test${VARIANT^}DebugUnitTest/TEST-*.xml'
+          report_paths: 'app/build/test-results/*/TEST-*.xml'
 
       - name: Upload built APK
         uses: actions/upload-artifact@v4
