--- a/appium-tests/pyproject.toml
+++ b/appium-tests/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "appium-tests"
 version = "0.1.0"
-description = "Add your description here"
+description = "End-to-end tests for EtchDroid"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
